--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,8 +33,8 @@
     "mikktspace": "^1.1.0",
     "minimatch": "^3.0.4",
     "node-gzip": "^1.1.2",
+    "p-limit": "^3.1.0",
     "semver": "^7.3.5",
-    "@supercharge/promise-pool": "^1.8.0",
     "tmp": "^0.2.1"
   },
   "files": [
